Added environment variable templates

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,29 @@
-# Alpaca API Credentials
+# Alpaca API settings
 ALPACA_API_KEY=your_api_key_here
-ALPACA_SECRET_KEY=your_secret_key_here 
+ALPACA_API_SECRET=your_api_secret_here
+ALPACA_API_URL=https://paper-api.alpaca.markets
+ALPACA_IS_PAPER=true
+
+# Flask settings
+FLASK_APP=backend.app
+FLASK_ENV=development
+FLASK_DEBUG=1
+
+# Database settings
+DATABASE_URL=sqlite:///crypto_trader.db
+
+# Email settings (optional)
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+SMTP_FROM=your_email@gmail.com
+
+# Logging settings
+LOG_LEVEL=INFO
+LOG_FILE=crypto_trader.log
+
+# Instructions:
+# 1. Copy this file to .env
+# 2. Replace the values with your actual credentials
+# 3. Never commit your actual .env file to version control 
